Deployed  with MkDocs version: 1.1

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
   pytest
   coverage
   sh
-  click==7.0
+  click
   py{27,py}: ipython<6.0.0
   py34{,-no-typing}: ipython<7.0.0
   py{35,36,37,38,py3}: ipython
@@ -22,7 +22,7 @@ commands =
 skip_install = true
 deps =
   flake8
-  mypy==0.761
+  mypy
 commands =
   flake8 src tests
   mypy --python-version=3.8 src tests
