--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,17 @@
 [tox]
 envlist = lint,py{27,34,35,36,37,38,39,34-no-typing},pypy,pypy3,manifest,coverage-report
 
+[gh-actions]
+python =
+    2.7: py27
+    3.5: py35
+    3.6: py36, lint, manifest
+    3.7: py37
+    3.8: py38, mypy
+    3.9-dev: py39
+    pypy2: pypy
+    pypy3: pypy3
+
 [testenv]
 deps =
   mock
