--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Tests
 
 on: [push]
 
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest #
-          - windows-latest # windows-2019
+          # - windows-latest # windows-2019
         python-version: [2.7, 3.5, 3.6, 3.7, 3.8, 3.9-dev, pypy2, pypy3]
 
     steps:
