--- a/setup.cfg
+++ b/setup.cfg
@@ -17,12 +17,13 @@ exclude = .tox,.git,docs,venv,.venv
 ignore_missing_imports = true
 
 [metadata]
-description-file = README.rst
+description-file = README.md
 
 [tool:pytest]
 testpaths = tests
 
 [coverage:run]
+relative_files = True
 source = dotenv
 
 [coverage:paths]
@@ -33,6 +34,7 @@ source =
 
 [coverage:report]
 show_missing = True
+include = */site-packages/dotenv/*
 exclude_lines =
     if IS_TYPE_CHECKING:
     pragma: no cover
